--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <h1>Kyle Atchison</h1>
         <!--About Portfolio Contact Links-->
         <section id="headmain">
-            <div class="contact">Contact</div>
-            <div class="portfolio">Portfolio</div>
-            <div class="about">About</div>
+            <a href="contact.html"><div class="contact">Contact</div></a>
+            <a href="portfolio.html"><div class="portfolio">Portfolio</div></a>
+            <a href="index.html"><div class="about">About</div></a>
         </section>
     </header>
 
