--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <!--About Portfolio Contact Links-->
         <section id="headmain">
             <a href="contact.html"><div class="contact">Contact</div></a>
+            <div class="line"></div>
             <a href="portfolio.html"><div class="portfolio">Portfolio</div></a>
+            <div class="line"></div>
             <a href="index.html"><div class="about">About</div></a>
         </section>
     </header>
@@ -29,7 +31,7 @@
 
        				 <div class="pic"><img src="./assets/images/me.jpg" height="200px" width="200px"></div>
 
-       				 <p>TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT</p> 
+       				 <p style="color:grey">My name is Kyle Atchison.  I am currently attending the University of Kansas' coding bootcamp.  I am 31 years old.  I am happily married of 5 years to my wife Joy.  We have two wonderful boys that are the ages one and four.</p> 
 
         			
         </div>
@@ -42,14 +44,14 @@
         	<h2>Connect with Me</h2> <hr>
 
 
-        	<p>
-        		<a href="http://github.com/TheDude1656"><img src="./assets/images/github.png" alt="git" width="25" height="25">
+        	<p class="center">
+        		<a href="http://github.com/TheDude1656" style="color: white"><img src="./assets/images/github.png" alt="git" width="40" height="40">
         		</a>
-        		<a href="https://www.linkedin.com/in/kyle-atchison-2200a8137/"><img src="./assets/images/linkedin.png" alt="linkedin" width="25" height="25">
+        		<a href="https://www.linkedin.com/in/kyle-atchison-2200a8137/" style="color: white"><img src="./assets/images/linkedin.png" alt="linkedin" width="40" height="40">
         		</a>
-        		<a href="https://stackoverflow.com/users/7976895/k-atchison"><img src="./assets/images/stackoverflow.png" alt="git" width="25" height="25">
+        		<a href="https://stackoverflow.com/users/7976895/k-atchison" style="color: white"><img src="./assets/images/stackoverflow.png" alt="git" width="40" height="40">
         		</a>
-        	</p>
+        	</p.center>
 
         </div>
     </section>
