--- a/contact.html
+++ b/contact.html
@@ -34,16 +34,16 @@
 
             <h2>Contact</h2>
             <hr>
-            <div style="color:grey; padding: 0px 5px 10px 10px">
+            <div style="color:grey; padding: 0px 5px 10px 10px; width: 580px">
                 <form action="/action_page.php">
                     <label for="name">Name:</label><br>
-                    <input type="text" id="name" style="width:580px" name="name" placeholder="John Smith">
+                    <input type="text" id="name" style="width:560px" name="name" placeholder="John Smith">
 
                     <label for="email">Email:</label><br>
-                    <input type="text" id="email" style="width:580px" name="email" placeholder="example@gmail.com">
+                    <input type="text" id="email" style="width:560px" name="email" placeholder="example@gmail.com">
 
                     <label for="message">Message:</label><br>
-                    <input type="text" id="message" style="width:580px; height:200px" name="message">
+                    <input type="text" id="message" style="width:560px; height:200px" name="message">
 
                     <input type="submit" value="Submit">
                 </form>
